Fixing positioning of the images
In mobile mode images were too wide and went off the screen.

I set max-width to fix the problem.

--- a/css/style.css
+++ b/css/style.css
@@ -80,12 +80,6 @@ header {
   height: 25px;
 }
 
-img {
-  width: auto;
-  height: 100%;
-  /* max-width: 300px; */
-}
-
 a {
   color: #FFFFFF;
   text-decoration: none;
@@ -177,20 +171,6 @@ h1 {
   display: none;
 }
 
-/* Salad page */
-/* @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.fade-in {
-  animation-name: fadeIn;
-  animation-duration: 1000ms;
-  animation-iteration-count: 1;
-} */
 section {
   /* height: 85%; */
   min-height: 620px;
@@ -199,7 +179,7 @@ section {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
-  border: solid #FF0000;
+  /* border: solid #FF0000; */
 }
 
 .controls {
@@ -233,9 +213,15 @@ button:hover {
 
 .slots {
   width: 100%;
-  border: 1px solid;
+  /* border: 1px solid; */
   display: flex;
   flex-direction: column;
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slot1,
@@ -252,6 +238,8 @@ button:hover {
 img {
   width: 100%;
   height: auto;
+  max-width: 320px;
+  border: 4px solid #2b5700;
 }
 
 /* Info page */
